# chromosome

./: Cargo.toml  LICENSE  README.md  genetics.files
.github/workflows/: ci.yml  release.yml  rust.yml
src/: cascade_sum.rs  chromosome.rs  lib.rs  main.rs  selector.rs  simulation_iter.rs  simulator.rs  utils.rs
tests/: chromosome_tests.rs  diophantus_equation.rs
