[package]
name = "chromosome"
description = "Genetic algorithm tools library"
license= "MIT"
version = "0.1.0"
authors = [ "borys <burbokop@gmail.com>" ]
readme = "README.md"
repository = "https://github.com/burbokop/chromosome"
documentation = "https://docs.rs/chromosome"
keywords = [ "chromosome", "genetic", "algorithms", "genetic_algorithms", "no_std" ]
edition = "2021"

[features]
default = [ "std" ]
std = [ "rand/std", "rand/std_rng" ]

[dependencies.rand]
version = "0.8.5"
default-features = false
features = [ "alloc" ]
