[package]
name = "chromosome"
description = "Genetic algorithm tools library"
license= "MIT"
version = "0.1.1"
authors = [ "borys <burbokop@gmail.com>" ]
readme = "README.md"
repository = "https://github.com/burbokop/chromosome"
documentation = "https://docs.rs/chromosome"
keywords = [ "chromosome", "genetic", "algorithms", "genetic-algorithms", "no-std" ]
categories = ["genetic-algorithms", "no-std"]
edition = "2021"

[features]
default = [ "std", "serde" ]
std = [ "rand/std", "rand/std_rng" ]
serde = [ "dep:serde" ]

[dependencies]
critical-section = "1.2.0"
serde = { version = "1.0", features = [ "derive" ], optional = true }

[dependencies.rand]
version = "0.8.5"
default-features = false
features = [ "alloc" ]

[dev-dependencies]
rand_seeder = "0.3.0"
rand_pcg = "0.3.1"
